# frankentar

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  frankentar.code-workspace  test.ftar
include/: CMakeLists.txt  frankentar.h
include/frankentar/: read.h  util.h  write.h
src/: CMakeLists.txt  main.c  read.c  util.c  write.c
